# example-fastapi-proj

./: Dockerfile  docker-compose-dev.yml  docker-compose-prod.yml  gunicorn.service  pyproject.toml  requirements.txt
.github/workflows/: build-deploy.yaml
alembic/: env.py
alembic/versions/: 03fe2bb2bd1d_user_phone_number.py  04795f442bb0_add_user_table.py  0f0076fb109f_add_foreign_key_to_post_table.py  28c3eeac8289_add_content_table_to_post_column.py  3d9b6fcf2996_auto_vote.py  83cbd479e16b_add_last_few_columns_to_posts_table.py  f9292dca12e0_create_posts_table.py
app/: calculations.py  config.py  db.py  main.py  models.py  oauth2.py  schemas.py  utils.py
app/routers/: auth.py  post.py  user.py  vote.py
test/: conftest.py  db.py  test_calculations.py  test_users.py
