[project]
name = "pythonapidev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "bcrypt==4.0.1",
    "dotenv>=0.9.9",
    "email-validator>=2.3.0",
    "fastapi>=0.137.2",
    "gunicorn>=26.0.0",
    "httpx2>=2.5.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2>=2.9.12",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
